# genpybind

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .iwyu-mapping-file.yaml  .pre-commit-config.yaml  CMakeLists.txt  README.md  genpybind.h  genpybind.imp  pyproject.toml  requirements.in  requirements.txt  ruff.toml
.github/workflows/: build.yml  fedora.yml  pre-commit.yml  pypi.yml
example-project/: CMakeLists.txt  pyproject.toml
example-project/include/: readme.h
example-project/src/: readme.cpp
include/genpybind/: annotated_decl.h  decl_context_collector.h  decl_context_graph.h  decl_context_graph_builder.h  decl_context_graph_processing.h  diagnostics.h  expose.h  inspect_graph.h  instantiate_alias_targets.h  instantiate_annotated_templates.h  instantiate_default_arguments.h  lookup_context_collector.h  options.h  pragmas.h  sort_decls.h  string_utils.h  visible_decls.h
include/genpybind/annotations/: annotation.h  annotations.def  literal_value.h  parser.h
manylinux_2_28_x86_64/: Dockerfile
public/genpybind/: binding-helpers.h  genpybind.h
python/genpybind/: __init__.py
runtime/genpybind/: runtime.h
src/: annotated_decl.cpp  decl_context_collector.cpp  decl_context_graph.cpp  decl_context_graph_builder.cpp  decl_context_graph_processing.cpp  diagnostics.cpp  expose.cpp  inspect_graph.cpp  instantiate_alias_targets.cpp  instantiate_annotated_templates.cpp  instantiate_default_arguments.cpp  lookup_context_collector.cpp  options.cpp  pragmas.cpp  sort_decls.cpp  string_utils.cpp  tool.cpp  visible_decls.cpp
src/annotations/: annotation.cpp  literal_value.cpp  parser.cpp
tests/: .clang-format  .clang-tidy  CMakeLists.txt  string_utils_test.cpp
tests/annotations/: annotation_test.cpp  expected.h  literal_value_test.cpp  parser_test.cpp  tokenizer_test.cpp
tests/integration/: CMakeLists.txt  aggregates.cpp  aggregates.h  aggregates_test.py  args-and-kwargs.cpp  args-and-kwargs.h  args-and-kwargs_test.py  base-classes-can-be-hidden.cpp  base-classes-can-be-hidden.h  base-classes-can-be-hidden_test.py  base-classes.cpp  base-classes.h  base-classes_test.py  constructors.cpp  constructors.h  constructors_test.py  default-arguments.cpp  default-arguments.h  default-arguments_test.py  docstrings.cpp  docstrings.h  docstrings_test.py  enumerators-can-have-annotations.cpp  enumerators-can-have-annotations.h  enumerators-can-have-annotations_test.py  enums-can-be-arithmetic.cpp  enums-can-be-arithmetic.h  enums-can-be-arithmetic_test.py  enums-export-values-when-scoped.cpp  enums-export-values-when-scoped.h  enums-export-values-when-scoped_test.py  enums-export-values-when-unscoped.cpp  enums-export-values-when-unscoped.h  enums-export-values-when-unscoped_test.py  explicit-function-template-instantiation.cpp  explicit-function-template-instantiation.h  explicit-function-template-instantiation_test.py  explicit-object-parameters.cpp  explicit-object-parameters.h  explicit-object-parameters_test.py  (+98 more)
tests/lit/: alias-report-conflicting-annotations.h  alias-report-wrong-targets.h  alias-to-dependent-context-uses-instantiation.h  aliases-can-be-used-to-expose-multiple-instantiations.h  args-kwargs-trailing-parameters.h  bug-nttp-not-fully-qualified.h  compilation-command-uses-cpp17-or-newer.h  explicit-template-instantiations-can-be-exposed.h  explicit-template-instantiations-can-be-nested-in-non-template-class.h  explicit-template-instantiations-can-be-nested-in-template-instantiation.h  explicit-template-instantiations-can-contain-nested-types.h  expose-here-can-move-enums.h  expose-here-propagates-visibility-to-nested-contexts.h  expose-here-report-cycles.h  expose-here-report-multiple-exposure-for-templates.h  expose-here-report-multiple-exposure.h  expose-here-report-wrong-targets.h  expose_as-report-wrong-arguments.h  function-argument-policies-report-invalid-specifiers.h  genpybind.h  implicit-conversion-report-wrong-arguments.h  implicit-conversion-report-wrong-constructor.h  invalid-pragma-is-diagnosed.h  lit.cfg  module-argument-has-effect-on-spelling.h  module-report-wrong-arguments.h  namespace-annotations-need-to-match-across-all-decls.h  namespace-annotations-should-match-for-all-redecls-with-annotated-decls.h  only_expose_in-report-wrong-arguments.h  point-of-exposure-is-lexical-context.h  point-of-exposure-is-semantic-context.h  property-annotations-can-only-be-used-with-methods.h  property-annotations-need-valid-arguments.h  property-annotations-need-valid-signature.h  property-needs-single-getter-and-optional-setter.h  pruning-discards-empty-moved-from-contexts.h  pruning-preserves-unnamed-contexts-with-exposed-children.h  pruning-works-for-inlined-namespaces.h  pruning-works-for-using-decls.h  regression-default-argument-crash.h  (+15 more)
tools/: genpybind.cmake  genpybindConfig.cmake.in
